# stgit

./: .coveragerc  .gitattributes  .gitignore  .mailmap  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  COPYING  Cargo.toml  ChangeLog  INSTALL  INSTALL.md  MANIFEST.in  Makefile  README  README.md  RELEASENOTES  TODO  build.py  build.rs  gitmergeonefile.py  pyproject.toml  setup.cfg  setup.py  stg  stg-build  stg-dbg  stg-prof  stgitrc  tox.ini
.github/workflows/: ci.yml  rebase.yml
Documentation/: .gitignore  COMMAND-TEMPLATE.txt  Makefile  SubmittingPatches  asciidoc.conf  asciidoctor-extensions.rb  cat-texi.perl  stg-branch.txt  stg-bury.txt  stg-clone.txt  stg-cp.txt  stg-init.txt  stg-new.txt  stg-sink.txt  stg.txt  tutorial.conf  tutorial.txt
completion/: Makefile  stgit.zsh
contrib/: Makefile  diffcol.sh  stg-cvs  stg-dispatch  stg-fold-files-from  stg-gitk  stg-k  stg-mdiff  stg-show  stg-show-old  stg-sink  stg-swallow  stg-unnew  stg-whatchanged  stgbashprompt.sh  stgit-completion.bash  stgit.el
contrib/release/: README  latest-changelog.awk  make-archive.sh  pkgtest.py  post-update  release.sh  snapshot.sh
contrib/vim/: Makefile  README
contrib/vim/ftdetect/: stg.vim
contrib/vim/syntax/: stgedit.vim  stgmail.vim  stgnew.vim  stgsquash.vim
contrib/wix/: .gitignore  Makefile  README.md  gpl-2.0.rtf  stgit.wxs
debian/: .gitignore  changelog  control  copyright  rules
doc/: .gitignore  Makefile  asciidoc.conf  tutorial.txt
examples/: firstmail.tmpl  gitconfig  patchdescr.tmpl  patchexport.tmpl  stgitrc
perf/: .gitignore  create_synthetic_repo.py  find_patchbomb.py  perftest.py  setup.sh
src/: alias.rs  argset.rs  branchloc.rs  color.rs  commit.rs  commitdata.rs  edit.rs  error.rs  hook.rs  index.rs  main.rs  message.rs  patchdescription.rs  patchedit.rs  patchname.rs  patchrange.rs  pathspec.rs  repo.rs  revspec.rs  signal.rs  signature.rs  stack.rs  stupid.rs  templates.rs  trailers.rs  transaction.rs
src/cmd/: branch.rs  clean.rs  clone.rs  commit.rs  delete.rs  diff.rs  edit.rs  export.rs  files.rs  float.rs  fold.rs  goto.rs  hide.rs  id.rs  import.rs  init.rs  log.rs  mod.rs  name.rs  new.rs  next.rs  patches.rs  pick.rs  pop.rs  prev.rs  pull.rs  push.rs  rebase.rs  redo.rs  refresh.rs  rename.rs  repair.rs  reset.rs  series.rs  show.rs  sink.rs  spill.rs  squash.rs  sync.rs  top.rs  (+4 more)
src/cmd/branch/: cleanup.rs  clone.rs  create.rs  delete.rs  describe.rs  list.rs  mod.rs  protect.rs  rename.rs  reset.rs  unprotect.rs
src/cmd/completion/: bash.rs  fish.rs  list.rs  man.rs  mod.rs  shstream.rs  zsh.rs
src/cmd/email/: format.rs  mod.rs  send.rs
src/ext/: commit.rs  mod.rs  repository.rs  signature.rs  time.rs
src/patch/: constraint.rs  identifier.rs  locator.rs  mod.rs  name.rs  offset.rs  range.rs  revspec.rs
src/patch/edit/: args.rs  description.rs  interactive.rs  mod.rs  parse.rs  trailers.rs
src/patch/parse/: locator.rs  mod.rs  name.rs  numbers.rs  range.rs  revision.rs
src/patch/parse/tests/: locators.rs  mod.rs  names.rs  ranges.rs  revisions.rs
src/patch/tests/: display.rs  mod.rs  resolution.rs
src/patchedit/: description.rs  interactive.rs  mod.rs  trailers.rs
src/stack/: access.rs  error.rs  iter.rs  mod.rs  serde.rs  stack.rs  state.rs  transaction.rs  upgrade.rs
src/stack/transaction/: builder.rs  mod.rs  options.rs  ui.rs
src/stupid/: command.rs  context.rs  diff.rs  mod.rs  oid.rs  status.rs  tempindex.rs  version.rs
src/wrap/: branch.rs  commit.rs  message.rs  mod.rs  partialrefname.rs  repository.rs  signature.rs
stgit/: .gitignore  __init__.py  __main__.py  _version.py  argparse.py  basedir.py  compat.py  completion.py  config.py  exception.py  git.py  gitmergeonefile.py  main.py  out.py  pager.py  run.py  stack.py  templates.py  utils.py  version.py
stgit/commands/: .gitignore  __init__.py  add.py  applied.py  assimilate.py  branch.py  bury.py  clean.py  clone.py  coalesce.py  commit.py  common.py  copy.py  delete.py  diff.py  edit.py  export.py  files.py  float.py  fold.py  goto.py  hide.py  id.py  imprt.py  init.py  log.py  mail.py  new.py  next.py  patches.py  pick.py  pop.py  prev.py  publish.py  pull.py  push.py  rebase.py  redo.py  refresh.py  rename.py  (+16 more)
stgit/completion/: bash.py  fish.py
stgit/lib/: __init__.py  edit.py  git.py  log.py  objcache.py  stack.py  stackupgrade.py  transaction.py
stgit/lib/git/: __init__.py  base.py  branch.py  date.py  iw.py  objects.py  person.py  repository.py
stgit/templates/: covermail.tmpl  mailattch.tmpl
t/: Makefile  README  interactive.sh  lib-gpg.sh  stg  t0000-dummy.sh  t0000-init.sh  t0001-subdir-branches.sh  t0002-status.sh  t0003-id.sh  t0004-main.sh  t0005-show.sh  t0006-patches.sh  t0007-files.sh  t0008-series.sh  t0009-log.sh  t0010-alias.sh  t0011-series-ranges.sh  t0012-color.sh  t0013-names.sh  t0014-locators.sh  t0100-help.sh  t1000-branch-create.sh  t1001-branch-rename.sh  t1002-branch-clone.sh  t1003-new.sh  t1004-pack-ref.sh  t1005-branch-delete.sh  t1006-branch-cleanup.sh  t1007-branch-protect.sh  t1008-branch-description.sh  t1009-gpg.sh  t1010-branch-switch.sh  t1100-clone-under.sh  t1200-push-merged.sh  t1200-push-modified.sh  t1201-pull-trailing.sh  t1201-push-noapply.sh  t1202-push-undo.sh  t1203-pop.sh  (+109 more)
t/t1305/: author-8859-1.txt
t/t1800/: diff-with-rejects  email-mbox  foo.txt  git-diff  git-diff-p0  gnu-diff
t/t1800-import/: email-qp  stg-export
t/t1800-import/patches/: delete-extra-lines.patch  fifth-stanza.patch  fourth-stanza.patch  sixth-stanza.patch  third-stanza.patch
t/t1800/patches/: attribution.patch  first-stanza.patch  second-stanza.patch  series  seventh-stanza.patch
t/t1801/: email-8bit  email-mbox-same-subject  email-quoted-from
t/t2703/: pre-commit
t/t4000/: make-repo.sh
t/t4000-upgrade/: .gitignore  make-repo.sh
t/test-bin/: stg
templates/: covermail.tmpl  mailattch.tmpl  patchandattch.tmpl  patchexport.tmpl  patchmail.tmpl
