[package]
name = "stgit"
version = "2.0.0-beta.3"
edition = "2021"
authors = [
    "Catalin Marinas <catalin.marinas@gmail.com>",
    "Peter Grayson <pete@jpgrayson.net>",
]
license = "GPL-2.0-only"
homepage = "https://stacked-git.github.io/"
repository = "https://github.com/stacked-git/stgit"

[[bin]]
bench = false
path = "src/main.rs"
name = "stg"

[dependencies]
anyhow = "1.0"
atty = "0.2"
bstr = { version = "0.2", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "3.2", default-features = false, features = ["color", "std", "suggestions", "wrap_help"] }
encoding_rs = "0.8"
git2 = { version = "0.15", default-features = false }
indexmap = "1.8"
lazy_static = "~1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10"
tempfile = "3"
termcolor = "1.1"
thiserror = "~1.0"

bzip2 = { version = "0.4", optional = true }
curl = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = ["import-compressed", "import-url"]
import-compressed = ["dep:bzip2", "dep:flate2", "dep:tar"]
import-url = ["dep:curl"]
