[package]
name = "stgit"
version = "2.1.0"
edition = "2021"
rust-version = "1.64"
authors = [
  "Catalin Marinas <catalin.marinas@gmail.com>",
  "Peter Grayson <pete@jpgrayson.net>",
]
license = "GPL-2.0-only"
homepage = "https://stacked-git.github.io/"
repository = "https://github.com/stacked-git/stgit"

[[bin]]
bench = false
path = "src/main.rs"
name = "stg"

[dependencies]
anyhow = "1.0"
bstr = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.1", default-features = false, features = [
  "color",
  "help",
  "std",
  "string",
  "suggestions",
  "usage",
  "wrap_help",
] }
ctrlc = "3.2"
encoding_rs = "0.8"
gix = { version = "0.36", default-features = false, features = [] }
indexmap = "1.8"
is-terminal = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10"
tempfile = "3"
termcolor = "1.1"
thiserror = "~1.0"
time = { version = "0.3.19", default-features = false, features = ["local-offset", "formatting", "macros", "parsing"] }

bzip2 = { version = "0.4", optional = true }
curl = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = ["import-compressed", "import-url"]
import-compressed = ["dep:bzip2", "dep:flate2", "dep:tar"]
import-url = ["dep:curl"]
