[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py35']
include = '''
(
    \.pyi?$
)
'''
exclude = '''
(
    \/\..*$
  | \/cmdlist\.py
  | \/build$
  | \/dist
)
'''

[tool.coverage.run]
source = ['stgit']
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
title = 'StGit Coverage Report'
show_contexts = true
